--- a/functions/package.json
+++ b/functions/package.json
@@ -10,10 +10,10 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.1.0",
+    "actions-on-google": "^2.5.0",
     "dialogflow-fulfillment": "^0.5.0",
-    "actions-on-google": "^2.1.3"
+    "firebase-admin": "~6.0.0",
+    "firebase-functions": "^2.1.0"
   },
   "devDependencies": {
     "eslint": "^4.12.0",
